Implement Syncing race results (#7)
* Implement sync all race results

* Make models snake case

* [wip]: Implement data seeding on first launch

* Implement avoiding seeding on test run

* Fix test

* Fix race result syncing

* Fix tests

* Update code coverage

---------

Co-authored-by: ext_ugur.unlu@spark.net <ext_ugur.unlu@spark.net>